# pkg/app/routes.go
@@ -5,13 +5,13 @@ import (
 )
 
 func (a *App) initializeRoutes() {
-	var apiV2 = "/api/v2"
+	var apiV1 = "/api/v1"
 
 	// specification routes
 	a.Router.HandleFunc(apiV2+"/specification/list", a.listConnectorSpecification).Methods("GET", "OPTIONS")
 
 	// user routes
-	a.Router.HandleFunc(apiV2+"/", a.getUsers).Methods("GET", "OPTIONS")
+	a.Router.HandleFunc(apiV2+"/admin/v1/users", a.getUsers).Methods("GET", "OPTIONS")
 
 	// Swagger
 	a.Router.PathPrefix("/docs").Handler(httpSwagger.WrapHandler)
